Ben's attempt to add logo to main page

--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -18,6 +18,8 @@
       <h2>Song Name</h2>
       <button class="play-button">Play</button>
     </div>
-    <div class="bottom-right"></div>
+    <div class="bottom-right">
+      <img src="./../resources/public/Spotify_Logo_RGB_Green.png" alt="Spotify logo" />
+    </div>
   </div>
 </div>
