--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -5,7 +5,7 @@
       <button class="round-button like-dislike" id="like-button">Like</button>
     </div>
     <div class="top-middle">
-      <img src="./../resources/public/music-cover.jpg" alt="Music Cover" />
+      <img src="music-cover.jpg" alt="Music Cover" />
       <!--this should be modified as a parameter, the music cover should be taken from Spotify-->
     </div>
     <div class="top-right">
@@ -19,7 +19,7 @@
       <button class="play-button">Play</button>
     </div>
     <div class="bottom-right">
-      <img src="src/main/webapp/app/menu/main-page/Spotify_Logo_RGB_Green.png" alt="Spotify logo" />
+      <img src="Spotify_Logo_RGB_Green.png" alt="Spotify logo" />
     </div>
   </div>
 </div>
