--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -19,7 +19,7 @@
       <button class="play-button">Play</button>
     </div>
     <div class="bottom-right">
-      <img src="Spotify_Logo_RGB_Green.png" alt="Spotify logo" />
+      <img src="Spotify_Logo_RGB_Green.jpg" alt="Spotify logo" />
     </div>
   </div>
 </div>
