--- a/src/main/webapp/app/menu/disliked-songs/disliked-songs.component.scss
+++ b/src/main/webapp/app/menu/disliked-songs/disliked-songs.component.scss
@@ -30,9 +30,10 @@ h2 {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 5px;
 }
-
-
-
+.scrollable-table {
+  max-height: 400px; /* Adjust the value */
+  overflow-y: auto;
+}
 
 .song-list-item {
   display: flex;
@@ -79,6 +80,7 @@ h2 {
 .song-table {
   width: 100%;
   border-collapse: collapse;
+  color: white;
 }
 
 .song-table th,
