--- a/src/main/webapp/app/menu/main-page/main-page.component.scss
+++ b/src/main/webapp/app/menu/main-page/main-page.component.scss
@@ -46,8 +46,10 @@
 }
 
 img {
-  max-width: 100px;
-  max-height: 100px;
+  display: block;
+  margin: auto;
+  max-width: 1000px;
+  max-height: 1000px;
 }
 
 .bottom-row {
@@ -66,11 +68,21 @@ img {
   margin-bottom: 20px;
 }
 
+.bottom-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
 h2 {
   margin-bottom: 10px;
 }
 
 .play-button {
+  display: block;
+  margin: auto;
   padding: 10px 20px;
   background-color: black;
   color: white;
