--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -12,14 +12,16 @@
       <button class="round-button like-dislike" id="dislike-button">Dislike</button>
     </div>
   </div>
+
   <div class="bottom-row">
     <div class="bottom-left"></div>
     <div class="bottom-middle">
       <h2>Song Name</h2>
+      <h3>Artist Name</h3>
       <button class="play-button">Play</button>
     </div>
     <div class="bottom-right">
-      <img src="Spotify_Logo_RGB_Green.jpg" alt="Spotify logo" />
+      <img src="Spotify_Logo_RGB_Green.jpg" alt="Spotify logo" style="height: 100px" />
     </div>
   </div>
 </div>
