Aki added new version of disliked-song design

--- a/src/main/webapp/app/menu/disliked-songs/disliked-songs.component.html
+++ b/src/main/webapp/app/menu/disliked-songs/disliked-songs.component.html
@@ -33,7 +33,7 @@
                 (click)="onPlayButtonClick(i)"
               ></i>
               <i
-                class="fa-solid fa-heart-circle-plus add-to-liked-songs-button"
+                class="fa-solid fa-heart add-to-liked-songs-button"
                 (click)="onAddToLikedSongsButtonClick(song)"
               ></i>
             </td>
