re-Aki added updated design for disliked-songs list

--- a/src/main/webapp/app/menu/disliked-songs/disliked-songs.component.html
+++ b/src/main/webapp/app/menu/disliked-songs/disliked-songs.component.html
@@ -1,23 +1,27 @@
 <div class="song-list">
   <h2>Disliked Songs List</h2>
   <div class="song-list-container">
-    <div class="scrollable-table"> <!-- make it scrollable-->
+    <div class="table-header">
       <table class="song-table">
         <thead>
         <tr>
           <th class="song-info-title">Title</th>
-          <th class="song-info-time">Time</th>
+          <th class="song-info-duration">Duration</th>
           <th class="song-info-artist">Artist</th>
           <th class="song-info-album">Album</th>
           <th class="song-info-genre">Genre</th>
           <th class="song-actions">Actions</th>
         </tr>
         </thead>
+      </table>
+    </div>
+    <div class="scrollable-table"> <!-- make it scrollable-->
+      <table class="song-table">
         <tbody>
         <ng-container *ngFor="let song of songs; let i = index">
           <tr class="song-item">
             <td class="song-info-title">{{ song.songName }}</td>
-            <td class="song-info-time">N/A</td>
+            <td class="song-info-duration">N/A</td>
             <td class="song-info-artist">{{ song.artistName }}</td>
             <td class="song-info-album">N/A</td>
             <td class="song-info-genre">N/A</td>
@@ -44,3 +48,28 @@
     </div>
   </div>
 </div>
+<div *ngIf="currentSong" class="now-playing">
+  <div class="song-info">
+    <img class="song-image" src="https://via.placeholder.com/60" alt="Album Art" />
+    <div class="song-details">
+      <p class="song-title">{{ currentSong.songName }}</p>
+      <p class="song-artist">{{ currentSong.artistName }}</p>
+    </div>
+  </div>
+  <div class="song-popup-actions">
+    <i
+      class="fas fa-play-circle play-button"
+      *ngIf="!currentSong"
+      (click)="onPlayButtonClick(currentlyPlayingIndex)"
+    ></i>
+    <i
+      class="fas fa-stop-circle play-button"
+      *ngIf="currentSong"
+      (click)="onPlayButtonClick(currentlyPlayingIndex)"
+    ></i>
+  </div>
+  <div class="progress-container">
+    <progress class="playing-progress" [value]="progress" max="100"></progress>
+  </div>
+</div>
+
