Ben Data collect good but delayed

--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -16,12 +16,15 @@
   <div class="bottom-row">
     <div class="bottom-left"></div>
     <div class="bottom-middle">
-      <h2>Song Name</h2>
-      <h3>Artist Name</h3>
-      <button class="play-button">Play</button>
+      <h2>{{ outTitle }}</h2>
+      <h3>{{ outArtist }}</h3>
+      <audio controls autoplay>
+        <source src="{{ outPreview }}" type="audio/mpeg" />
+        The preview is not working.
+      </audio>
     </div>
     <div class="bottom-right">
-      <img src="Spotify_Logo_RGB_Green.jpg" alt="Spotify logo" style="height: 100px" />
+      <img src="Spotify_Logo_RGB_Green.jpg" alt="Spotify logo" style="height: 70px" />
     </div>
   </div>
 </div>
