--- a/src/main/webapp/app/menu/profile/profile.component.scss
+++ b/src/main/webapp/app/menu/profile/profile.component.scss
@@ -42,10 +42,20 @@
   height: 106px;
   float: left;
   border-radius: 4px;
-  color: black;
+  color: white;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   padding: 5px;
   margin: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pBox img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
 }
 
 .sBox2 {
@@ -75,35 +85,35 @@
   cursor: pointer;
   position: absolute;
   left: 65%;
-  bottom: -20%;
+  bottom: 10%;
 }
 
 .artistChart {
   display: inline-block;
-  height: 150px;
-  width: 150px;
+  height: 140px;
+  width: 140px;
   border-radius: 50%;
   position: absolute;
   left: 150px;
-  top: 1.5%;
+  top: 0%;
 }
 
 .songChart {
-  height: 150px;
-  width: 150px;
+  height: 140px;
+  width: 140px;
   border-radius: 50%;
   position: absolute;
   left: 450px;
-  top: 1.5%;
+  top: 0%;
 }
 
 .aLetter {
   font-family: 'Gill Sans';
-  width: fix-content;
+  width: fit-content;
   font-weight: bold;
   position: absolute;
   top: 100%;
-  left: 20px;
+  left: 15px;
 }
 
 .sLetter {
@@ -112,7 +122,7 @@
   font-weight: bold;
   position: absolute;
   top: 100%;
-  left: 25px;
+  left: 23px;
 }
 
 .f1Pos {
