--- a/src/main/webapp/app/menu/disliked-songs/disliked-songs.component.html
+++ b/src/main/webapp/app/menu/disliked-songs/disliked-songs.component.html
@@ -6,7 +6,7 @@
         <thead>
         <tr>
           <th class="song-info-title">Title</th>
-          <th class="song-info-duration">Duration</th>
+          <th class="song-info-time">Time</th>
           <th class="song-info-artist">Artist</th>
           <th class="song-info-album">Album</th>
           <th class="song-info-genre">Genre</th>
@@ -21,7 +21,7 @@
         <ng-container *ngFor="let song of songs; let i = index">
           <tr class="song-item">
             <td class="song-info-title">{{ song.songName }}</td>
-            <td class="song-info-duration">N/A</td>
+            <td class="song-info-time">N/A</td>
             <td class="song-info-artist">{{ song.artistName }}</td>
             <td class="song-info-album">N/A</td>
             <td class="song-info-genre">N/A</td>
@@ -36,10 +36,14 @@
                 *ngIf="isPlaying(i)"
                 (click)="onPlayButtonClick(i)"
               ></i>
-              <i
-                class="fa-solid fa-heart add-to-liked-songs-button"
-                (click)="onAddToLikedSongsButtonClick(song)"
-              ></i>
+              <div class="heart-container">
+                <i class="fa-solid fa-heart add-to-liked-songs-button"
+                   [ngClass]="{'transparent': song.isLiked}"
+                   (click)="onAddToLikedSongsButtonClick(song)">
+
+                </i>
+
+              </div>
             </td>
           </tr>
         </ng-container>
