--- a/src/main/webapp/app/menu/main-page/main-page.component.html
+++ b/src/main/webapp/app/menu/main-page/main-page.component.html
@@ -4,9 +4,11 @@
     <div class="top-left">
       <button class="round-button like-dislike" id="like-button">Like</button>
     </div>
-    <div class="top-middle">
-      <img src="{{ outImage }}" alt="Music Cover" style="width: 300px; height: 300px" />
-      <!--this should be modified as a parameter, the music cover should be taken from Spotify-->
+    <div *ngIf="dataLoaded | async">
+      <div class="top-middle">
+        <img src="{{ outImage }}" alt="Music Cover" style="width: 300px; height: 300px" />
+        <!--this should be modified as a parameter, the music cover should be taken from Spotify-->
+      </div>
     </div>
     <div class="top-right">
       <button class="round-button like-dislike" id="dislike-button">Dislike</button>
@@ -15,13 +17,15 @@
 
   <div class="bottom-row">
     <div class="bottom-left"></div>
-    <div class="bottom-middle">
-      <h2>{{ outTitle }}</h2>
-      <h3>{{ outArtist }}</h3>
-      <audio controls autoplay>
-        <source src="{{ outPreview }}" type="audio/mpeg" />
-        The preview is not working.
-      </audio>
+    <div *ngIf="dataLoaded | async">
+      <div class="bottom-middle">
+        <h2>{{ outTitle }}</h2>
+        <h3>{{ outArtist }}</h3>
+        <audio controls autoplay>
+          <source src="{{ outPreview }}" type="audio/mpeg" />
+          The preview is not working.
+        </audio>
+      </div>
     </div>
     <div class="bottom-right">
       <img src="Spotify_Logo_RGB_Green.jpg" alt="Spotify logo" style="height: 70px" />
