--- a/src/main/webapp/app/initial-training/initial-training.component.html
+++ b/src/main/webapp/app/initial-training/initial-training.component.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://api.spotfy.com/*" />
+
 <html>
   <body>
     <form>
