--- a/src/main/webapp/app/initial-training/initial-training.component.html
+++ b/src/main/webapp/app/initial-training/initial-training.component.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://api.spotfy.com/*" />
-
+<meta
+  http-equiv="Content-Security-Policy"
+  content="default-src * self blob: data: gap:; style-src * self 'unsafe-inline' blob: data: gap:; script-src * 'self' 'unsafe-eval' 'unsafe-inline' blob: data: gap:; object-src * 'self' blob: data: gap:; img-src * self 'unsafe-inline' blob: data: gap:; connect-src self * 'unsafe-inline' blob: data: gap:; frame-src * self blob: data: gap:;"
+/>
 <html>
   <body>
     <form>
