--- a/src/main/webapp/app/menu/settings/settings.component.html
+++ b/src/main/webapp/app/menu/settings/settings.component.html
@@ -1,20 +1,3 @@
-<!--
-<!DOCTYPE html>
-<html>
-  <head>
-    <h1>Settings Pages</h1>
-    <title>Settings Page</title>
-
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="settings.component.scss" />
-  </head>
-  <body>
-    <input type="checkbox" id="darkmode-toggle" />
-    <label for="darkmode-toggle"> </label>
-  </body>
-</html>
--->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -23,44 +6,57 @@
     <link rel="stylesheet" href="settings.component.scss" />
   </head>
   <body>
-    <header>
-      <h1>Setting</h1>
-    </header>
-    <main>
-      <section>
-        <h2>High Contrast Mode</h2>
-        <label class="switch">
-          <input type="checkbox" />
-          <span class="slider"></span>
-        </label>
-      </section>
-      <section>
-        <h2>Text Size</h2>
-        <form>
-          <label><input type="radio" name="text-size" value="small" />Small</label>
-          <label><input type="radio" name="text-size" value="medium" />Medium</label>
-          <label><input type="radio" name="text-size" value="large" />Large</label>
-          <label><input type="radio" name="text-size" value="extreme-large" />Extreme Large</label>
-        </form>
-      </section>
-      <section>
-        <h2>Audio Description</h2>
-        <label class="switch">
-          <input type="checkbox" />
-          <span class="slider"></span>
-        </label>
-      </section>
-      <section>
-        <h2>Volume</h2>
-        <div class="volume">
-          <img src="sound.png" alt="sound icon" />
-          <input type="range" min="0" max="100" value="50" />
-        </div>
-      </section>
-      <section>
-        <h2>Version</h2>
-        <p>1.0</p>
-      </section>
-    </main>
+    <div [ngClass]="{ 'high-contrast': highContrast }">
+      <header>
+        <h1>Setting</h1>
+      </header>
+      <main>
+        <section>
+          <h2>Theme</h2>
+          <button (click)="toggleHighContrastMode(false)">Default</button>
+          <button (click)="toggleHighContrastMode(true)">High Contrast</button>
+        </section>
+        <section>
+          <h2>High Contrast Mode</h2>
+          <label class="switch">
+            <input type="checkbox" id="highContrastToggle" />
+            <span class="slider"></span>
+          </label>
+        </section>
+        <section>
+          <h2>Text Size</h2>
+          <form>
+            <div>
+              <label><input type="radio" name="text-size" value="small" />Small</label>
+              <label><input type="radio" name="text-size" value="medium" />Medium</label>
+              <label><input type="radio" name="text-size" value="large" />Large</label>
+              <label><input type="radio" name="text-size" value="extreme-large" />Extreme Large</label>
+            </div>
+
+            <div>
+              <input type="button" value="Set" id="SetButton" />
+            </div>
+          </form>
+        </section>
+        <section>
+          <h2>Audio Description</h2>
+          <label class="switch">
+            <input type="checkbox" />
+            <span class="slider"></span>
+          </label>
+        </section>
+        <section>
+          <h2>Volume</h2>
+          <div class="volume">
+            <img src="sound.png" alt="sound icon" />
+            <input type="range" min="0" max="100" value="50" />
+          </div>
+        </section>
+        <section>
+          <h2>Version</h2>
+          <p>1.0</p>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
