--- a/src/main/webapp/app/menu/settings/settings.component.scss
+++ b/src/main/webapp/app/menu/settings/settings.component.scss
@@ -1,66 +1,3 @@
-/*
-body {
-  margin: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-label {
-  width: 500px;
-  height: 200px;
-  position: relative;
-  display: block;
-  background: #ebebeb;
-  border-radius: 200px;
-  box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4), inset 0px -5px 15px rgba(255, 255, 255, 0.4);
-  cursor: pointer;
-  transition: 0.3s;
-}
-label:after {
-  content: '';
-  width: 180px;
-  height: 180px;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  background: linear-gradient(180deg, #ffcc89, #d8860b);
-  border-radius: 180px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-}
-input {
-  width: 0;
-  height: 0;
-  visibility: hidden;
-}
-input:checked + label {
-  background: #242424;
-}
-input:checked + label:after {
-  left: 490px;
-  transform: translateX(-100%);
-  background: linear-gradient(180deg, #777, #3a3a3a);
-}
-label:active:after {
-  width: 260px;
-}
-.background {
-  width: 100vw;
-  height: 100vh;
-  background: #fff;
-  z-index: -1;
-  position: absolute;
-  transition: 0.3s;
-}
-input:checked + label + .background {
-  background: #242424;
-}
-
- */
-
 /* reset default margin and padding for body and section */
 body,
 section {
@@ -77,7 +14,7 @@ section:not(:last-child) {
 
 /* style for the header and main sections */
 header {
-  background-color: #f2f2f2;
+  background-color: var(--background-color);
   padding: 20px;
 }
 
@@ -85,7 +22,7 @@ main {
   max-width: 500px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: var(--background-color);
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
