Updating High Contrast mode -background-color & text-color applied to Settings page -background-color applied to all the other pages -To do -- set all the variables for all the components on the other pages

--- a/src/main/webapp/app/menu/settings/settings.component.html
+++ b/src/main/webapp/app/menu/settings/settings.component.html
@@ -17,13 +17,6 @@
           <button (click)="toggleHighContrastMode(true)">High Contrast</button>
         </section>
         <section>
-          <h2>High Contrast Mode</h2>
-          <label class="switch">
-            <input type="checkbox" id="highContrastToggle" />
-            <span class="slider"></span>
-          </label>
-        </section>
-        <section>
           <h2>Text Size</h2>
           <form>
             <div>
@@ -48,7 +41,7 @@
         <section>
           <h2>Volume</h2>
           <div class="volume">
-            <img src="sound.png" alt="sound icon" />
+            <img src="sound.jpg" alt="sound icon" />
             <input type="range" min="0" max="100" value="50" />
           </div>
         </section>
