--- a/src/main/webapp/app/menu/settings/settings.component.scss
+++ b/src/main/webapp/app/menu/settings/settings.component.scss
@@ -98,7 +98,7 @@ form label {
 /* style for the version */
 p {
   font-size: 30px;
-  color: black;
+  color: var(--text-color);
   text-align: center;
   margin-top: 10px;
 }
