--- a/src/main/webapp/app/menu/main-page/main-page.component.scss
+++ b/src/main/webapp/app/menu/main-page/main-page.component.scss
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: var(--background-color);
 }
 
 .top-left,
@@ -18,22 +19,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--background-color);
 }
 
 .round-button {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background-color: white;
-  border: 2px solid black;
-  color: black;
+  background-color: var(--background-color);
+  border: 2px solid var(--border-color);
+  color: var(--text-color);
   font-size: 20px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   margin: 10px;
   &:hover {
-    background-color: black;
-    color: white;
+    background-color: var(--text-color);
+    color: var(--background-color);
   }
 }
 
@@ -43,6 +45,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--background-color);
 }
 
 img {
@@ -50,6 +53,7 @@ img {
   margin: auto;
   max-width: 500px;
   max-height: 500px;
+  border-color: var(--border-color);
 }
 
 .bottom-row {
@@ -58,6 +62,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: var(--background-color);
 }
 
 .bottom-middle {
@@ -66,6 +71,7 @@ img {
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  background-color: var(--background-color);
 }
 
 .bottom-right {
@@ -74,11 +80,13 @@ img {
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  background-color: var(--background-color);
 }
 
 h2 {
   margin-bottom: 10px;
   font-size: xx-large;
+  background-color: var(--background-color);
 }
 
 h3 {
